<resources>
    <string name="app_name">MobileFTP</string>
    <string name="client_text">FTP Client</string>
    <string name="server_text">FTP Server</string>

    <string name="help_title">How to use it?</string>
    <string name="step1">1.As a server-side device, turn on the hotspot</string>
    <string name="step2">2.As a server-side device, start the FTP service</string>
    <string name="step3">3.As the client device, connect to the hotspot</string>
    <string name="step4">4.As the client device, connect to the FTP service</string>

    <string name="start_ftp_server">Run as an FTP server</string>
    <string name="start_ftp_client">Run as an FTP client</string>

    <string name="backup">Backup</string>
    <string name="title_server_ip_and_port">Please input server ip and port</string>
    <string name="title_port">Port:</string>
    <string name="title_user">Username:</string>
    <string name="title_password">Password:</string>
    <string name="title_path">Share Path:</string>

    <string name="title_download_file">Download File</string>

    <string name="choose_file_to_upload">Choose file to upload</string>
    <string name="connect_ftp_server">Connect FTP server</string>
    <string name="disconnect_ftp_server">Disconnect FTP server</string>

    <string name="run_ftp_server">Start FTP Server</string>
    <string name="stop_ftp_server">Stop FTP Server</string>
    <string name="welcome_text">Welcome to use MobileFTP</string>
    <string name="choose_file_to_download">Choose file to download</string>
    <string name="download_file_tips">Do you want to download the file?</string>



    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="file">File</string>
    <string name="dir">Direction</string>
    <string name="link">Link</string>
    <string name="passive_model">Passive Model</string>
    <string name="initiative_model">Initiative Model</string>
    <string name="passive_mode_title">Initiative port：</string>
    <string name="passive_btn">passive/initiative mode</string>
    <string name="encoding_mode">Encoding mode</string>
    <string name="transmission_mode">Transmission Mode</string>
    <string name="file_structure">File Structure</string>

</resources>