<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="欢迎使用MobileFTP"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="@string/welcome_text" />

        <TextView
            android:id="@+id/tv_help_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_as_server"
            style="@style/BtnStyle"
            android:layout_height="wrap_content"
            android:text="@string/start_ftp_server" />

        <Button
            android:id="@+id/btn_as_client"
            style="@style/BtnStyle"
            android:layout_height="wrap_content"
            android:text="@string/start_ftp_client" />

    </LinearLayout>

</layout>