<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_cur_dir_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <!--Input Server Ip or port-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/tv_input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_server_ip_and_port" />

            <EditText
                android:id="@+id/et_server_ip"
                android:layout_width="186dp"
                android:layout_height="25dp"
                android:layout_below="@id/tv_input_title"
                android:layout_marginTop="4dp"
                android:background="@drawable/border"
                android:inputType="textShortMessage"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/et_server_port"
                android:layout_alignBottom="@id/et_server_port"
                android:layout_toEndOf="@id/et_server_ip"
                android:gravity="center"
                android:padding="4dp"
                android:text=":"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_server_port"
                android:layout_width="64dp"
                android:layout_height="25dp"
                android:layout_below="@id/tv_input_title"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/symbol"
                android:background="@drawable/border"
                android:inputType="number"
                android:textSize="12sp" />
        </RelativeLayout>

        <!--Input user and password-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/tv_user_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/et_username"
                android:layout_alignBottom="@id/et_username"
                android:gravity="start|center_vertical"
                android:text="@string/title_user" />

            <TextView
                android:id="@+id/tv_psw_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tv_user_title"
                android:layout_alignTop="@id/et_password"
                android:layout_alignEnd="@id/tv_user_title"
                android:layout_alignBottom="@id/et_password"
                android:gravity="start|center_vertical"
                android:text="@string/title_password" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="130dp"
                android:layout_height="25dp"
                android:layout_toEndOf="@id/tv_user_title"
                android:background="@drawable/border"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="130dp"
                android:layout_height="25dp"
                android:layout_below="@id/tv_user_title"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/tv_psw_title"
                android:background="@drawable/border"
                android:textSize="12sp" />

        </RelativeLayout>

        <!--Output debug info or other msg-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">


            <EditText
                android:id="@+id/et_passive_port"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@+id/textView2"
                android:background="@drawable/border"
                android:inputType="number"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="9dp"
                android:text="@string/passive_mode_title" />

            <Button
                android:id="@+id/bt_passive"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="35dp"
                android:text="@string/passive_btn" />

            <Button
                android:id="@+id/bt_encode"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="180dp"
                android:layout_marginTop="70dp"
                android:text="@string/encoding_mode" />

            <Button
                android:id="@+id/bt_transmission"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="180dp"
                android:layout_marginTop="35dp"
                android:text="@string/transmission_mode" />

            <Button
                android:id="@+id/bt_file_struction"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="70dp"
                android:text="@string/file_structure" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/btn_connect"
            style="@style/BtnStyle"
            android:layout_height="wrap_content"
            android:text="@string/connect_ftp_server" />
        <Button
            android:id="@+id/btn_upload_file"
            style="@style/BtnStyle"
            android:layout_height="wrap_content"
            android:text="@string/choose_file_to_upload" />
        <Button
            android:id="@+id/btn_download_file"
            style="@style/BtnStyle"
            android:layout_height="wrap_content"
            android:text="@string/choose_file_to_download" />
        <Button
            android:id="@+id/btn_disconnect"
            style="@style/BtnStyle"
            android:layout_height="wrap_content"
            android:text="@string/disconnect_ftp_server" />

    </LinearLayout>

    <data>

    </data>

</layout>