<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border"
            android:scrollbars="vertical"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_user" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_below="@+id/textView6"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_port" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_below="@+id/textView3"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_password" />

            <EditText
                android:id="@+id/se_username"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/textView3"
                android:background="@drawable/border" />

            <EditText
                android:id="@+id/se_user_password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/se_username"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/textView6"
                android:background="@drawable/border" />

            <EditText
                android:id="@+id/se_port"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/se_user_password"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="18dp"
                android:layout_toEndOf="@+id/textView5"
                android:background="@drawable/border" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_start_server"
            style="@style/BtnStyle"
            android:layout_height="wrap_content"
            android:text="@string/run_ftp_server" />

        <Button
            android:id="@+id/btn_stop_server"
            style="@style/BtnStyle"
            android:layout_height="wrap_content"
            android:text="@string/stop_ftp_server" />

    </LinearLayout>

</layout>